--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.idea/compiler.xml
+03_PizzaShop/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
