--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 hs_err_pid*
 .idea/compiler.xml
 03_PizzaShop/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+.idea/sonarlint/*
