--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ hs_err_pid*
 .idea/compiler.xml
 03_PizzaShop/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
 .idea/sonarlint/*
+
+payments.txt
