first test done

--- a/TheInternetApp/pom.xml
+++ b/TheInternetApp/pom.xml
@@ -3,12 +3,43 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire.plugin.version}</version>
+
+                <configuration>
+
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${testNGXml}</suiteXmlFile>
+                        <!-- <suiteXmlFile>src/test/resources/test_parameters.xml</suiteXmlFile> -->
+                    </suiteXmlFiles>
+
+                    <failIfNoTests>true</failIfNoTests>
+
+                    <includes>
+                        <!--defaults-->
+                        <include>**/Test*.java</include>
+                        <include>**/*Test.java</include>
+                        <include>**/*Tests.java</include>
+                        <include>**/*TestCase.java</include>
+                    </includes>
+
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <groupId>org.example</groupId>
     <artifactId>TheInternetApp</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+        <testNG.version>7.3.0</testNG.version>
+        <testNGXml>testSuites/defaultAll.xml</testNGXml>
+        <maven.surefire.plugin.version>3.0.0-M4</maven.surefire.plugin.version>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
     </properties>
@@ -28,6 +59,22 @@
             <version>3.141.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testNG.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- surefire-report -->
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-report-plugin</artifactId>
+            <version>${maven.surefire.plugin.version}</version>
+        </dependency>
+
+
     </dependencies>
+
 
 </project>
